--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   avatar           : "profile.png"
   name             : "Info"
   pronouns         : example: "she/her"  
-  # bio              : "Short biography for the left-hand sidebar"
+  bio              : "Short biography for the left-hand sidebar"
   location         : "Evanston, IL"
   employer         : "The University of Chicago"
   uri              : # URL
