Fix pronouns formatting in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   # Biographic information
   avatar           : "profile.png"
   name             : "Info"
-  pronouns         : example: "she/her"  
+  pronouns         : "she/her"  
   bio              : "Short biography for the left-hand sidebar"
   location         : "Evanston, IL"
   employer         : "The University of Chicago"
