Update bio in _config.yml
Removed the mention of 'Predoc at Northwestern University' from the bio.

--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   avatar           : "profile.png"
   name             : "Info"
   pronouns         : "she/her"  
-  bio              : "Master student at UChicago, Predoc at Northwestern University"
+  bio              : "Master student at UChicago"
   location         : "Evanston, IL"
   employer         : "The University of Chicago"
   uri              : # URL
