--- a/_config.yml
+++ b/_config.yml
@@ -87,6 +87,10 @@ publication_category:
     title: 'Journal Articles'    
   conferences:
     title: 'Conference Papers'
+  workingpapers:
+    title: "Working Papers"
+  worksinprogress:
+    title: "Works in Progress" 
 
 # Site Settings
 teaser                   :  # filename of teaser fallback teaser image placed in /images/ for social media previews
