--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,7 +8,7 @@
 #      Markdown formatted page while the second is generated using JSON.
 
 main:
-  - title: "Projects"
+  - title: "Publications"
     url: /publications/
 
   # - title: "Talks"
@@ -25,6 +25,9 @@ main:
     
   - title: "CV"
     url: /cv/
+
+  - title: "Projects"
+    url: /Projects/
     
   # - title: "CV"
   #   url: /cv-json/
